--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.game {
+	margin-top: 2rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.heading {
+	margin-top: 5rem;
+	font-size: 2rem;
+	font-weight: 400;
+}
+.board {
+	margin: 5rem auto 2rem auto;
+	padding: auto;
+	display: flex;
+	flex-direction: column;
+}
+
+.row {
+	display: flex;
+	justify-content: center;
+}
+
+.box {
+	width: 6rem;
+	height: 6rem;
+	border: 0.1rem solid blue;
+	text-align: center;
+	font-size: 5rem;
+}
+
+.reset-button {
+	margin-top: 2rem;
+	color: red;
+	background-color: gold;
+	border-radius: 2rem;
+	width: 10rem;
+	height: 2rem;
+	outline: none;
+}
+
+.reset-button:active {
+	transform: translateY(0.2rem);
+}
+
+.status {
+	margin: 0;
 }
